Make header description smaller on mobile and fixing the placement of the title

--- a/src/sass/header/_title.scss
+++ b/src/sass/header/_title.scss
@@ -113,23 +113,23 @@
 		padding-bottom: 12px;
 
 		.title {
-			line-height: 0.8;
 			text-align: center;
 
 			.site {
 				font-size: 20px;
 				font-weight: 200;
-				&:after {
-					content: none;
-				}
+				padding-top: 16px;
+				display: block;
+
+				// Remove the slash
+				&:after { content: none; }
 			}
 			.controller {
-				font-size: 40px;
 				font-weight: 400;
 				font-size: 30px;
-				padding-bottom: 6px;
 				display: block;
-				padding-top: 20px;
+				padding-top: 10px;
+				padding-bottom: 12px;
 			}
 		}
 
@@ -161,7 +161,7 @@
 
 		.description {
 			font-size: 18px;
-			margin: 8px 10% 0;
+			margin: 0 10%;
 			line-height: 1.2em;
 			text-align: center;
 		}
@@ -174,6 +174,10 @@
 		}
 		.pull-right {
 			right: -$main-padding + $main-padding-mobile;
+		}
+		.description {
+			font-size: 16px;
+			margin: 0;
 		}
 	}
 
